@@ -1,0 +1,13 @@
+{
+    "$id": "doc/spec/tags.json",
+    "title": "Tags",
+    "type": ["object", "null"],
+    "description": "A flat mapping of user-defined tags with string values.",
+    "patternProperties": {
+        "^[^.*\"]*$": {
+            "type": ["string", "null"],
+            "maxLength": 1024
+        }
+    },
+    "additionalProperties": false
+}
