@@ -312,15 +312,17 @@ const PayloadSchema = `{
     "required": ["url", "method"]
         },
         "tags": {
-            "type": ["object", "null"],
-            "description": "A flat mapping of user-defined tags with string values.",
-            "patternProperties": {
-                "^[^.*\"]*$": {
-                    "type": ["string", "null"],
-                    "maxLength": 1024
-                }
-            },
-            "additionalProperties": false
+                "$id": "doc/spec/tags.json",
+    "title": "Tags",
+    "type": ["object", "null"],
+    "description": "A flat mapping of user-defined tags with string values.",
+    "patternProperties": {
+        "^[^.*\"]*$": {
+            "type": ["string", "null"],
+            "maxLength": 1024
+        }
+    },
+    "additionalProperties": false
         },
         "user": {
                 "$id": "docs/spec/user.json",
@@ -417,6 +419,19 @@ const PayloadSchema = `{
                             "description": "The raw url of the correlating http request."
                         }
                     }
+                },
+                "tags": {
+                        "$id": "doc/spec/tags.json",
+    "title": "Tags",
+    "type": ["object", "null"],
+    "description": "A flat mapping of user-defined tags with string values.",
+    "patternProperties": {
+        "^[^.*\"]*$": {
+            "type": ["string", "null"],
+            "maxLength": 1024
+        }
+    },
+    "additionalProperties": false
                 }
             }
         },
