@@ -158,6 +158,9 @@
                         "version": "3.14.0"
                     },
                     "name": "1234_service-12a3"
+                },
+                "tags": {
+                    "span_tag": "something"
                 }
             },
             "processor": {
